Added the reflection

--- a/reflection.html
+++ b/reflection.html
@@ -1,30 +1,76 @@
 <!DOCTYPE hitml>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link href="normalize.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="info.js"></script>
-    <title>Kaori Kojima</title>
-    <div class="logo">
-      <a href="#"><p><img src="logo.png" alt="logo" width="150px" height="100px"</p></a>
-      <p class="title">WEB 222 -FINAL-</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <link href="normalize.css" rel="stylesheet" type="text/css" media="all" />
+  <script src="info.js"></script>
+  <title>Kaori Kojima</title>
+  <div class="logo">
+    <a href="#">
+      <p><img src="logo.png" alt="logo" width="150px" height="100px" /> </p>
+    </a>
+    <p class="title">WEB 222 -FINAL-</p>
+  </div>
+</head>
+
+<body>
+  <nav>
+    <ul class="menu">
+      <li><a href="honesty.html">Honesty</a></li>
+      <li><a href="info.html">Info</a></li>
+      <li><a href="reflection.html">Reflection</a></li>
+    </ul>
+  </nav>
+  <div class="border-2">
+    <div class="border">
+      <p class="border-3">
+        A responsive web design is designing of a web application taking into account dynamic changes in the size,
+        orientation, and devices. These parameters may change while the user is using the application. For example, a
+        user may be using the application full screen on a desktop, but then decides to make the window smaller. If that
+        happens, the developer should take into account how the application should look at that point to make sure it is
+        still readable. Usually, dynamic web design can be accomplished by using break points in CSS. We can define the
+        break points with parameters such as maximum and minimum screen sizes, etc. Then, the developer can make the
+        application presentable to end-users by doing CSS for each case in a clear manner. This way, the web application
+        can now be presented on small devices such as smartphones and desktops, etc. For examples, on a large enough
+        window, I may want to display a group of elements horizontally, but on smaller one, I may decide to align them
+        vertically.
+        <br />
+        Responsive web designs relate to web technologies because it is obviously relevant in a way that web
+        applications should be presented in a way that it can handle the dynamic changes in parameters such as sizes of
+        the windows, thus making it easier for the user to use. Again, for now, I can think of developing application
+        with responsive design in CSS, and as I do more projects, there may be times I need to use javascript to handle
+        the way web application is presented. For example, on a large enough screen, I would assume that the user will
+        have the mouse, so I could add on hover behaviors on elements such as change in color on hover, but on smaller
+        one, I could disable that. Another example is, I may want to add some animations to the application for
+        presentation on large enough screen using javascript, but on smaller one, I could just disable it and put an
+        image instead.
+        <br />
+        I learned a lot about building web applications for different devices through my own research. Specifically for
+        different devices, I learned about using break points in CSS for presentation. I did not get to do a lot of
+        those in this course, but I can see myself using those a lot in the future. One thing I discovered on my own
+        research that I like is Google Chrome comes with built in tool called “Toogle device toolbar”. This allows me to
+        quickly overview how my application would like on mobile devices, and furthermore, how user can use it as it can
+        simulate the touch functions. I can see myself using this a lot in the future. I learned throughout the course
+        how friendly Google Chrome is designed for developers. Another remarkable thing I learned is regex. I watched
+        some youtube tutorials on how to do basic regex for form validation.
+        <br />
+        Overall, my learning experience in this course is excellent in my opinion. I have learned a lot about CSS. I
+        have learned a little bit about CSS in high school, but it was very brief and I had to rely a lot on flex box
+        tool to make my life easier. After taking this course, CSS makes a lot more sense to me now. I have also learned
+        to manipulate the DOM using javascript. Even though most of the jobs in industry will probably use frameworks
+        like JQuery, React, etc. understanding vanilla javascript helps me to learn advanced technologies with solid
+        foundation knowledge. In high school, I only learned a little bit about static HTML and CSS, but this course
+        helps me to learn how to intergrate javascript into web technology to do basic functions such as switching the
+        page, validating the form, etc. I have learned a lot in this course, and I am more confident about building a
+        web application and I feel that I am more ready for the developer job.
+
+      </p>
     </div>
-  </head>
-  <body>
-    <nav>
-      <ul class="menu">
-        <li><a href="honesty.html">Honesty</a></li>
-        <li><a href="info.html">Info</a></li>
-        <li><a href="reflection.html">Reflection</a></li>
-      </ul>
-    </nav>
-    <div class="border-2">
-      <div class="border">
-        <p class="border-3"></p>
-      </div>
-    </div>
-    <div id="footer">
-      <a href="#">Git Hub LINK</a>
-    </div>
-  </body>
+  </div>
+  <div id="footer">
+    <a href="https://github.com/kkojima2/WEB222">Git Hub LINK</a>
+  </div>
+</body>
+
 </html>
