Updated the date

--- a/honesty.html
+++ b/honesty.html
@@ -33,7 +33,7 @@
         this assignment for my use.<br />
         I also declare that no part of this assignment has been distributed to other students.<br /><br /><br />
         Name: Kaori Kojima<br />
-        Dated: Type the submission date here
+        Dated: December 10th, 2021
       </p>
     </div>
   </div>
