--- a/reflection.html
+++ b/reflection.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hitml>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,15 +6,16 @@
   <link href="normalize.css" rel="stylesheet" type="text/css" media="all" />
   <script src="info.js"></script>
   <title>Kaori Kojima</title>
-  <div class="logo">
-    <a href="#">
-      <p><img src="logo.png" alt="logo" width="150px" height="100px" /> </p>
-    </a>
-    <p class="title">WEB 222 -FINAL-</p>
-  </div>
+
 </head>
 
 <body>
+  <div class="logo">
+    <a href="#">
+      <p><img src="logo.png" alt="logo" width="150" height="100" /> </p>
+    </a>
+    <p class="title">WEB 222 -FINAL-</p>
+  </div>
   <nav>
     <ul class="menu">
       <li><a href="honesty.html">Honesty</a></li>
