--- a/honesty.html
+++ b/honesty.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hitml>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -6,15 +6,15 @@
   <link href="normalize.css" rel="stylesheet" type="text/css" media="all" />
   <script src="info.js"></script>
   <title>Kaori Kojima</title>
-  <div class="logo">
-    <a href="#">
-      <p><img src="logo.png" alt="logo" width="150px" height="100px" /></p>
-    </a>
-    <p class="title">WEB 222 -FINAL-</p>
-  </div>
 </head>
 
 <body>
+  <div class="logo">
+    <a href="#">
+      <p><img src="logo.png" alt="logo" width="150" height="100" /></p>
+    </a>
+    <p class="title">WEB 222 -FINAL-</p>
+  </div>
   <nav>
     <ul class="menu">
       <li><a href="honesty.html">Honesty</a></li>
@@ -33,7 +33,7 @@
         this assignment for my use.<br />
         I also declare that no part of this assignment has been distributed to other students.<br /><br /><br />
         Name: Kaori Kojima<br />
-        Dated: December 10th, 2021
+        Dated: Type the submission date here
       </p>
     </div>
   </div>
